[tool.poetry]
name = "saral_utils"
version = "2.0.0"
description = "utility package for saral"
authors = ["mohit sharma <mohitlakshya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.82"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.29"
requests = "^2.31.0"
boto3-stubs = {extras = ["secretsmanager", "ssm"], version = "^1.34.84"}


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
